<resources>
    <string name="app_name">WSDOT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WSDOT</string>
    <string name="nav_header_subtitle">Washington State Department of Transportation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">feedback</string>
    <string name="action_travel_charts">Travel Charts</string>
    <string name="action_travel_times">Travel Times</string>
    <string name="menu_traffic_map">Traffic Map</string>
    <string name="menu_ferries">Ferries</string>
    <string name="menu_mountain_passes">Mountain Passes</string>
    <string name="menu_travel_times">Travel Times</string>
    <string name="menu_bridge_alerts">Bridge Alerts</string>
    <string name="menu_toll_rates">Toll Rates</string>
    <string name="menu_border_waits">Canadian Border Waits</string>
    <string name="menu_amtrak_cascades">Amtrak Cascades</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_my_route">My Routes</string>
    <string name="tolling_disclaimer">Estimated toll rates provided as a courtesy. You\'ll always pay the toll you see on actual road signs when you enter.</string>
    <string name="action_good_to_go">My Good To Go</string>
    <string name="info_16">Learn how SR 16 tolls work</string>
    <string name="info_99">Learn how SR 99 tolls work</string>
    <string name="info_167">Learn how SR 167 tolls work</string>
    <string name="info_509">Learn how SR 509 tolls work</string>
    <string name="info_520">Learn how SR 520 tolls work</string>
    <string name="info_450">Learn how I-405 tolls work</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_alert_in_area">Alerts in this Area</string>
    <string name="action_go_to_location">Go To Location</string>
    <string name="action_more">More</string>
    <string name="highway_alert_marker_collection_id">HIGHWAY_ALERT_MARKERS</string>
    <string name="rest_area_marker_collection_id">REST_AREA_MARKERS</string>
    <string name="selected_marker_collection_id">SELECTED_CAMERA_MARKER</string>
    <string name="mountain_pass_marker_collection_id">SELECTED_MOUNTAIN_PASS_MARKER</string>
    <string name="travel_time_marker_collection_id">SELECTED_TRAVEL_TIME_MARKER</string>
    <string name="no_alert_string">Alert unavailable</string>
    <string name="via_text">Via %s</string>
    <string name="crossing_time">Crossing time ~ %1$s mins</string>
    <string name="ferry_reservation">vehicle\nreservations</string>
    <string name="ferry_vessel_watch">vessel watch</string>
    <string name="ferry_buy_tickets">buy\ntickets</string>
    <string name="sailing_hint">select sailing date</string>
    <string name="reservation_spaces_label">%d RESERVATION SPACES</string>
    <string name="restriction_header_text">Restrictions %s:</string>
    <string name="elevation_text">%d ft</string>
    <string name="crossing_name_text">%s (%s)</string>
    <string name="rest_area_location_header">Location:</string>
    <string name="rest_area_location_text">%s - %s</string>
    <string name="rest_area_direction_header">Direction:</string>
    <string name="rest_area_milepost_header">Milepost:</string>
    <string name="rest_area_milepost_text">%d</string>
    <string name="rest_area_amenities_header">Amenities:</string>
    <string name="train_comment">Estimated %s</string>
    <string name="amtrak_trip_header">Trip %s</string>
    <string name="twitter_status_url">https://twitter.com/%s/status/%s</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="retry">Retry</string>
    <string name="permission_station_location_rationale">Allows WSDOT to select the departing station closest to you.</string>
    <string name="permission_terminal_location_rationale">Allows WSDOT to select the departing terminal closest to you.</string>
    <string name="permission_location_denied">location permission denied</string>
    <string name="permission_location_never_ask_again">location permission denied. Please go to permission settings to allow WSDOT to use your location</string>
    <string name="weather_forecast_icon">weather forecast icon</string>
    <string name="permission_map_location_rationale">WSDOT wants permission to show your location on the map</string>
    <string name="user_preference_traffic_map_latitude">USER_PREF_KEY_TRAFFIC_MAP_LAT</string>
    <string name="user_preference_traffic_map_longitude">USER_PREF_KEY_TRAFFIC_MAP_LONG</string>
    <string name="user_preference_traffic_map_zoom">USER_PREF_KEY_TRAFFIC_MAP_ZOOM</string>
    <string name="user_preference_traffic_map_show_cameras">USER_PREF_KEY_TRAFFIC_MAP_SHOW_CAMERAS</string>
    <string name="user_preference_traffic_map_show_highway_alerts">USER_PREF_KEY_TRAFFIC_MAP_SHOW_HIGHWAY_ALERTS</string>
    <string name="user_preference_traffic_map_cluster_cameras">USER_PREF_KEY_TRAFFIC_MAP_CLUSTER_CAMERAS</string>
    <string name="user_preference_traffic_map_show_rest_areas">USER_PREF_KEY_TRAFFIC_MAP_SHOW_REST_AREAS</string>
    <string name="user_preference_traffic_map_show_mountain_passes">USER_PREF_KEY_TRAFFIC_MAP_SHOW_MOUNTAIN_PASSES</string>
    <string name="user_preference_traffic_map_show_travel_times">USER_PREF_KEY_TRAFFIC_MAP_SHOW_TRAVEL_TIMES</string>
    <string name="user_preference_traffic_map_show_traffic_layer">USER_PREF_KEY_TRAFFIC_MAP_SHOW_TRAFFIC_LAYER</string>
    <string name="user_preference_vessel_watch_latitude">USER_PREF_KEY_VESSEL_WATCH_LAT</string>
    <string name="user_preference_vessel_watch_longitude">USER_PREF_VESSEL_WATCH_LONG</string>
    <string name="user_preference_vessel_watch_zoom">USER_PREF_VESSEL_WATCH_ZOOM</string>
    <string name="user_preference_vessel_watch_show_traffic_layer">USER_PREF_KEY_VESSEL_WATCH_SHOW_TRAFFIC_LAYER</string>
    <string name="user_preference_vessel_watch_show_terminals">USER_PREF_KEY_VESSEL_WATCH_SHOW_TERMINAL_LAYER</string>
    <string name="user_preference_vessel_watch_cameras">USER_PREF_KEY_VESSEL_WATCH_CAMERAS</string>
    <string name="user_preference_vessel_watch_vessels">USER_PREF_KEY_VESSEL_WATCH_VESSELS</string>
    <string name="user_preference_vessel_watch_labels">USER_PREF_KEY_VESSEL_WATCH_LABELS</string>
    <string name="key_value_dark_theme">KEY_DARK_THEME</string>
    <string name="key_value_light_theme">KEY_LIGHT_THEME</string>
    <string name="key_value_system_theme">KEY_SYSTEM_THEME</string>
    <string name="pref_key_user_theme">CURRENT_USER_THEME_KEY</string>
    <string name="pref_key_show_fav_camera_inline">KEY_FAV_SHOW_CAMERAS_INLINE</string>
    <string name="pref_key_favorites_sort_order">KEY_FAV_SORT_ORDER</string>
    <string name="pref_key_current_event">KEY_CURRENT_EVENT</string>
    <string name="pref_key_last_seen_event">KEY_SEEN_EVENT</string>
    <string name="pref_key_has_seen_driving_message">KEY_HAS_SEEN_DRIVING_MESSAGE</string>
    <string name="pref_key_theme">CURRENT_THEME_KEY</string>
    <string name="pref_key_last_nav_location">KEY_LAST_NAVIGATION_SCREEN</string>
    <string name="key_value_traffic_nav">KEY_TRAFFIC_NAV</string>
    <string name="key_value_ferries_nav">KEY_FERRIES_NAV</string>
    <string name="key_value_mountain_passes_nav">KEY_PASSES_NAV</string>
    <string name="key_value_bridge_alerts_nav">KEY_BRIDGE_ALERTS_NAV</string>
    <string name="key_value_toll_rates_nav">KEY_TOLL_RATES_NAV</string>
    <string name="key_value_border_waits_nav">KEY_BORDER_WAITS_NAV</string>
    <string name="key_value_amtrak_nav">KEY_AMTRAK_NAV</string>
    <string name="key_value_favorites_nav">KEY_FAVORITES_NAV</string>
    <string name="fab_highway_alerts_label">Highway Alerts</string>
    <string name="fab_camera_label">Cameras</string>
    <string name="fab_vessel_label">Vessels</string>
    <string name="fab_label_label">Labels</string>
    <string name="fab_camera_Clusters_label">Group Cameras</string>
    <string name="fab_rest_areas_label">Rest Areas</string>
    <string name="fab_mountain_passes_label">Mountain Passes</string>
    <string name="fab_travel_times_label">Travel Times</string>
    <string name="fab_traffic_layer_label">Traffic Layer</string>
    <string name="fab_terminal_layer_label">Terminals</string>
    <string name="ad_banner_description">advertisement</string>
    <string name="ad_target_traffic">traffic</string>
    <string name="ad_target_ferries">ferries</string>
    <string name="ad_target_passes">passes</string>
    <string name="ad_target_border">border</string>
    <string name="ad_target_other">other</string>
    <string name="no_alerts_string">No Alerts Reported In This Location</string>
    <string name="favorites_one">FAV_ONE</string>
    <string name="favorites_two">FAV_TWO</string>
    <string name="favorites_three">FAV_THREE</string>
    <string name="favorites_four">FAV_FOUR</string>
    <string name="no_favorites_title">No Favorites</string>
    <string name="no_favorites_text">You can add favorites by tapping hearts found throughout the app</string>
    <string name="favorites_five">FAV_FIVE</string>
    <string name="favorites_six">FAV_SIX</string>
    <string name="favorites_seven">FAV_SEVEN</string>
    <string name="departure_date_hint">select departure date</string>
    <string name="about_text" formatted="true">This app is provided to you by the Washington State Department of Transportation. Please use this to know before you go and never ever use this app while driving. Safe Travels!\n\nDISCLAIMER: WSDOT provides this information on an AS-IS basis and specifically disclaims all warranties of any kind, express or implied, arising out of or relating to the information provided in this app. To the maximum extent permitted by applicable law, WSDOT shall not be liable to you for any actual, consequential, incidental, indirect, or other damages related to your use of this information. It is your responsibility to observe conditions on the road and adjust your plans and driving accordingly.\n</string>
    <string name="loading_error_message">Error Loading</string>
    <string name="menu_notifications">Notifications</string>
    <string name="msg_subscribed">subscribed to topic</string>
    <string name="msg_subscribe_failed">subscribe failed</string>
    <string name="msg_unsubscribed">unsubscribed</string>
    <string name="msg_unsubscribe_failed">unsubscribed failed</string>
    <string name="push_alert_traffic_alert">traffic_alert_push_key</string>
    <string name="push_alert_traffic_alert_id">traffic_alert_id_push_key</string>
    <string name="push_alert_traffic_alert_title">traffic_alert_title_key</string>
    <string name="push_alert_traffic_alert_latitude">traffic_alert_lat_push_key</string>
    <string name="push_alert_traffic_alert_longitude">traffic_alert_lng_push_key</string>
    <string name="push_alert_ferry_alert">ferry_alert_push_key</string>
    <string name="push_alert_ferry_alert_id">ferry_alert_id_push_key</string>
    <string name="push_alert_ferry_route_id">ferry_alert_route_id_push_key</string>
    <string name="push_alert_ferry_route_title">ferry_alert_route_title_push_key</string>
    <string name="push_alert_bridge_alert">bridge_alert_push_key</string>
    <string name="push_alert_bridge_alert_id">bridge_alert_id_push_key</string>
    <string name="ferries_shortcut_short_label">Ferries</string>
    <string name="ferries_shortcut_long_label">Ferry Schedules</string>
    <string name="passes_shortcut_short_label">Passes</string>
    <string name="passes_shortcut_long_label">Mountain Passes</string>
    <string name="favorites_shortcut_short_label">Favorites</string>
    <string name="favorites_shortcut_long_label">Favorites</string>
</resources>