<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_traffic_map"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_traffic_map"/>
        <item
                android:id="@+id/nav_ferries"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_ferries"/>
        <item
                android:id="@+id/nav_mountain_passes"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_mountain_passes"/>
        <item
            android:id="@+id/nav_toll_rates"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_toll_rates"/>
        <item
                android:id="@+id/nav_border_waits"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_border_waits"/>
        <item
                android:id="@+id/nav_amtrak_cascades"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_amtrak_cascades"/>
    </group>

    <item android:title="My WSDOT">
        <menu>
            <item
                    android:id="@+id/nav_favorites"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_favorites"/>
            <item
                    android:id="@+id/nav_my_routes"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_my_route"/>
        </menu>
    </item>

</menu>
