<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="always"/>

    <item android:id="@+id/action_go_to_location"
        android:title="@string/action_go_to_location"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_location"
        app:showAsAction="always"/>

    <item android:id="@+id/action_alerts"
        android:title="@string/action_alert_in_area"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_alert"
        app:showAsAction="always"/>

    <item android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_favorite_outline"
        app:showAsAction="always"/>

    <group android:id="@+id/travel_charts_group"
        android:visible="false">

        <item android:id="@+id/action_travel_charts"
            android:title="@string/action_travel_charts"
            android:orderInCategory="100"
            android:icon="@drawable/travel_chart_layered_icon"
            app:showAsAction="always"/>

    </group>


    <item android:id="@+id/action_more"
        android:title="@string/action_more"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_more"
        app:showAsAction="always"/>


</menu>
