<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="gov.wa.wsdot.android.wsdot.model.common.Status" />
        <import type="gov.wa.wsdot.android.wsdot.model.common.Resource" />
        <import type="androidx.lifecycle.LiveData"/>
        <import type="gov.wa.wsdot.android.wsdot.db.ferries.FerrySchedule"/>
        <import type="gov.wa.wsdot.android.wsdot.ui.ferries.FerriesViewModel" />

        <variable
            name="viewModel"
            type="FerriesViewModel"/>

        <variable
            name="retryCallback"
            type="gov.wa.wsdot.android.wsdot.ui.common.callback.RetryCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/button_grid"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="4dp"
            android:paddingStart="@dimen/content_padding"
            android:paddingEnd="@dimen/content_padding">

            <LinearLayout
                android:id="@+id/vessel_watch_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/vessel_watch_button"
                    android:backgroundTint="?themeColorPrimary"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/ferry_vessel_watch"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                app:layout_constraintTop_toBottomOf="@id/vessel_watch_button_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buy_tickets_button"
                    android:backgroundTint="?themeColorPrimary"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/ferry_buy_tickets"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reservation_button"
                    android:backgroundTint="?themeColorPrimary"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/ferry_reservation"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_grid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:refreshing="@{((Resource) viewModel.routes).status == Status.LOADING}"
            app:onRefreshListener="@{() -> viewModel.refresh()}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedule_list"
                android:paddingStart="@dimen/content_padding"
                android:paddingEnd="@dimen/content_padding"
                app:layoutManager="LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                tools:listitem="@layout/ferry_schedule_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>